# PlotJuggler

./: .gitignore
.github/workflows/: codeql.yml
bench/: CMakeLists.txt  bench_engines.cpp
plotjuggler_app/: CMakeLists.txt  color_picker_popup.cpp  color_picker_popup.h  curve_style_editor.cpp  curve_style_editor.h  curve_style_editor.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  plot_docker_toolbar.cpp  plot_docker_toolbar.h  plotside_editor.cpp  plotside_editor.h  plotside_editor.ui  plotwidget.cpp  plotwidget.h  plotwidget_editor.cpp  plotwidget_editor.h  plotwidget_editor.ui  resource.qrc
plotjuggler_app/transforms/: custom_function.cpp  custom_function.h  function_editor.cpp  function_editor.h  function_editor.ui  functions_library.cpp  functions_library.h  functions_library.ui  lua_custom_function.cpp  lua_custom_function.h  python_custom_funcion.cpp  python_custom_function.cpp  python_custom_function.h
plotjuggler_plugins/ParserROS/: ros_parser.cpp
plotjuggler_plugins/ParserROS/rosx_introspection/: CMakeLists.txt
plotjuggler_plugins/ParserROS/rosx_introspection/include/rosx_introspection/: ros_field.hpp
plotjuggler_plugins/ParserROS/rosx_introspection/src/: ros_field.cpp
plotjuggler_plugins/ParserROS/rosx_introspection/tests/: test_ros_field.cpp
